--- a/templates/polls/add_link_view.html
+++ b/templates/polls/add_link_view.html
@@ -2,17 +2,21 @@
 
 {% block page %}
 <div class="container">
-    <form class= "form-horizontal" method = post action="AddLink">
+    <form class="form-horizontal" method="post" action="">
     <fieldset>
-    <legend>Add new link</legend>
-    {% csrf_token %}
-    {{ form.as_p }}
-    <div class="control-group">
-    <label class="control-label"></label>
-    <div class="controls">
-    <button type="submit" class="btn btn-primary" name = "addlinkbutton">Add Link</button>
-    </div>
-    </div>
+        <div class="form_box">
+            <legend>Add new link</legend>
+
+            {% csrf_token %}
+            {{ form.as_p }}
+
+            <div class="control-group">
+            <label class="control-label"></label>
+            <div class="controls">
+            <button type="submit" class="btn btn-primary" name="addlinkbutton">Add Link</button>
+            </div>
+            </div>
+        </div>
     </fieldset>
     </form>
 </div>
