--- a/templates/polls/base.html
+++ b/templates/polls/base.html
@@ -17,13 +17,13 @@
 <div class="navbar navbar-default">
                <div class="container">
                    <div class="navbar-header">
-                       <a class="navbar-brand" href = "/index">Link Storage</a>
+                       <a class="navbar-brand" href = "/polls">Link Storage</a>
                    </div>
                    <ul class="nav navbar-nav">
-                       <li><a href = "/index">Home</a></li>
+                       <li><a href = "/polls">Home</a></li>
                        <li><a href="/Link/PublicLinks/?page=0">Public Links</a></li>
                        <li><a href="/User/AllUsers/?page=0">Users</a></li>
-                       <li><a href="/Link/AddLink">Add Link</a></li>
+                       <li><a href="/polls/addLink">Add Link</a></li>
                        <li><a href="/Link/UserLinks/?page=0">My Links</a></li>
                        <li><a href="/Link/AllLinks/?page=0">All links</a></li>
                        <li><a href="/User/ViewProfile">My Profile</a></li>
