add public links view

--- a/templates/polls/base.html
+++ b/templates/polls/base.html
@@ -21,7 +21,7 @@
                    </div>
                    <ul class="nav navbar-nav">
                        <li><a href = "/polls">Home</a></li>
-                       <li><a href="/Link/PublicLinks/?page=0">Public Links</a></li>
+                       <li><a href="/polls/PublicLinks/">Public Links</a></li>
                        <li><a href="/User/AllUsers/?page=0">Users</a></li>
                        <li><a href="/polls/addLink">Add Link</a></li>
                        <li><a href="/Link/UserLinks/?page=0">My Links</a></li>
