--- a/templates/polls/login.html
+++ b/templates/polls/login.html
@@ -1,15 +1,12 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Login</title>
-</head>
-<body>
-    <form action="" method="post">
+{% extends 'polls/base.html' %}
+
+{% block page %}
+<div class="container">
+        <legend>Login page</legend>
+          <form class="form-signin" role="form" action = "" method = "post">
           {% csrf_token %}
-          <!-- as_p для того, чтобы каждый элемент формы был с новой строки -->
           {{ form.as_p }}
-          <button type="submit">Login</button>
-    </form>
-</body>
-</html>
+          <button class="btn btn-lg btn-primary btn-block" type="submit" name = "loginbutton">Login</button>
+          </form>
+</div>
+{% endblock %}
