--- a/static/polls/css/style.css
+++ b/static/polls/css/style.css
@@ -11,5 +11,5 @@ li a {
 
 /*!*border: 1px solid #270644;*!*/
 /*}*/
-label {float:left; padding-right:10px;}
+/*label {float:left; padding-right:10px;}*/
 .form_box {float:left;}
