--- a/templates/polls/profile_edit_view.html
+++ b/templates/polls/profile_edit_view.html
@@ -2,54 +2,56 @@
 
 {% block page %}
 <div class="container">
-                <form class= "form-horizontal" method = post action="/User/UpdateProfile/?userid=''">
+                <form class= "form-horizontal" method = post action="">
 
                 <fieldset>
-
                 <legend>Edit profile</legend>
 
-                <div class="control-group">
-                    <label class="control-label">Login</label>
-                        <div class="controls">
-                        <input type="text" name = "login" value ="'.$data['login'].'" required disabled>
-                        </div>
-                </div>
+                <!--<div class="control-group">-->
+                    <!--<label class="control-label">Login</label>-->
+                        <!--<div class="controls">-->
+                        <!--<input type="text" name = "login" value ="{{ profile.0.username }}" required disabled>-->
+                        <!--</div>-->
+                <!--</div>-->
 
 
-                <div class="control-group">
-                    <label class="control-label">Mail</label>
-                        <div class="controls">
-                        <input type="text" name = "mail" value ="'.$data['email'].'" required autofocus>
-                        </div>
-                </div>
+                <!--<div class="control-group">-->
+                    <!--<label class="control-label">Mail</label>-->
+                        <!--<div class="controls">-->
+                        <!--<input type="text" name = "mail" value ="{{ profile.0.email }}" required autofocus>-->
+                        <!--</div>-->
+                <!--</div>-->
 
-                <div class="control-group">
-                    <label class="control-label">Name</label>
-                        <div class="controls">
-                        <input type="text" name = "username" value ="'.$data['name'].'" required>
-                        </div>
-                </div>
+                <!--<div class="control-group">-->
+                    <!--<label class="control-label">Name</label>-->
+                        <!--<div class="controls">-->
+                        <!--<input type="text" name = "username" value ="{{ profile.0.first_name }}" required>-->
+                        <!--</div>-->
+                <!--</div>-->
 
-                <div class="control-group">
-                    <label class="control-label">Surname</label>
-                        <div class="controls">
-                        <input type="text" name = "surname" value ="'.$data['surname'].'" required>
-                        </div>
-                </div>
+                <!--<div class="control-group">-->
+                    <!--<label class="control-label">Surname</label>-->
+                        <!--<div class="controls">-->
+                        <!--<input type="text" name = "surname" value ="{{ profile.0.last_name }}" required>-->
+                        <!--</div>-->
+                <!--</div>-->
 
-                <div class="control-group">
-                    <label class="control-label">Password</label>
-                        <div class="controls">
-                        <input type="password" name = "password" value ="" required>
-                        </div>
-                </div>
+                <!--<div class="control-group">-->
+                    <!--<label class="control-label">Password</label>-->
+                        <!--<div class="controls">-->
+                        <!--<input type="password" name = "password" value ="" required>-->
+                        <!--</div>-->
+                <!--</div>-->
 
 
 
-                <div class="checkbox">
-                      <input type="hidden" name="statusflag" value="0" />
-                      <label><input type="checkbox" name = "statusflag" value = "1">Set status active</label>
-                </div>
+                <!--<div class="checkbox">-->
+                      <!--<input type="hidden" name="statusflag" value="0" />-->
+                      <!--<label><input type="checkbox" name = "statusflag" value = "1">Set status active</label>-->
+                <!--</div>-->
+
+                {% csrf_token %}
+                {{ form.as_p }}
 
                 <div class="control-group">
                 <label class="control-label"></label>
