--- a/templates/polls/link_info_view.html
+++ b/templates/polls/link_info_view.html
@@ -28,6 +28,7 @@
                 <label class="control-label"></label>
                 <div class="controls">
                 <a href="/polls/editLinkInfo/" class="btn btn-primary">Edit Link</a>
+                    <a href="/polls//" class="btn btn-primary">Delete Link</a>
                 </div>
         </div>
         {% endif %}
