--- a/templates/polls/link_info_view.html
+++ b/templates/polls/link_info_view.html
@@ -27,7 +27,7 @@
         <div class="control-group">
                 <label class="control-label"></label>
                 <div class="controls">
-                <a href="/polls/editLinkInfo/" class="btn btn-primary">Edit Link</a>
+                <a href="/polls/editLinkInfo/{{ link.id }}/" class="btn btn-primary">Edit Link</a>
                     <a href="/polls//" class="btn btn-primary">Delete Link</a>
                 </div>
         </div>
