--- a/templates/polls/user_list_view.html
+++ b/templates/polls/user_list_view.html
@@ -30,5 +30,20 @@
                 {% endfor %}
                 </tbody>
             </table>
+            <div class="pagination">
+                    <span class="step-links">
+                        {% if users.has_previous %}
+                            <a href="?page={{ users.previous_page_number }}">Previous</a>
+                        {% endif %}
+
+                        <span class="current">
+                            Page {{ users.number }} of {{ users.paginator.num_pages }}
+                        </span>
+
+                        {% if users.has_next %}
+                            <a href="?page={{ users.next_page_number }}">Next</a>
+                        {% endif %}
+                    </span>
+            </div>
 </div>
 {% endblock %}
