--- a/templates/polls/base.html
+++ b/templates/polls/base.html
@@ -6,6 +6,7 @@
             {% load staticfiles %}
             <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
             <script type="text/javascript" src="{% static 'polls/js/logout.js' %}"></script>
+            <script type="text/javascript" src="{% static 'polls/js/deleteLink.js' %}"></script>
             <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
             <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js" integrity="sha384-0mSbJDEHialfmuBBQP6A4Qrprq5OVfW37PRR3j5ELqxss1yVqOtnepnHVP9aJ7xS" crossorigin="anonymous"></script>
             <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.10.0/css/bootstrap-select.min.css">
@@ -31,7 +32,8 @@
                    </ul>
                    {% if user.is_authenticated %}
                    <div class="nav navbar-nav navbar-right">
-                       <a href="/polls/logout/" class="btn btn-default navbar-btn">Logout</a>
+                   <button id="logout" class="btn btn-default navbar-btn">Logout</button>
+{#                       <a href="/polls/logout/" class="btn btn-default navbar-btn">Logout</a>#}
                    </div>
                    {% else %}
                    <div class="nav navbar-nav navbar-right">
@@ -42,6 +44,10 @@
                </div>
             </div>
 {% block page %}
+
+{% endblock %}
+
+{% block modal_window %}
 
 {% endblock %}
 
