--- a/templates/polls/link_info_view.html
+++ b/templates/polls/link_info_view.html
@@ -23,12 +23,13 @@
                                 <span class="inline">{{ link.private_flag }}</span>
                     </div>
 
+
         {% if user.is_authenticated %}
         <div class="control-group">
                 <label class="control-label"></label>
                 <div class="controls">
                 <a href="/polls/editLinkInfo/{{ link.id }}/" class="btn btn-primary">Edit Link</a>
-                    <a href="/polls//" class="btn btn-primary">Delete Link</a>
+                    <button class="btn btn-primary delete-link-button" id='{{ link.id }}' name = "deletelinkbutton">Delete link</button>
                 </div>
         </div>
         {% endif %}
@@ -36,4 +37,24 @@
 
 </div>
 
+{% endblock %}
+
+{% block modal_window %}
+    <div id="confirmDialog" class="modal fade">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    <h4 class="modal-title">Confirmation</h4>
+                </div>
+                <div class="modal-body">
+                    <p>Do you want to delete this record?</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                    <button type="button" class="btn btn-danger" id="deleteButton">Delete</button>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
