--- a/templates/polls/links_view.html
+++ b/templates/polls/links_view.html
@@ -24,5 +24,20 @@
                 {% endfor %}
                 </tbody>
             </table>
+            <div class="pagination">
+                    <span class="step-links">
+                        {% if link.has_previous %}
+                            <a href="?page={{ link.previous_page_number }}">Previous</a>
+                        {% endif %}
+
+                        <span class="current">
+                            Page {{ link.number }} of {{ link.paginator.num_pages }}
+                        </span>
+
+                        {% if link.has_next %}
+                            <a href="?page={{ link.next_page_number }}">Next</a>
+                        {% endif %}
+                    </span>
+            </div>
 </div>
 {% endblock %}
