--- a/templates/polls/user_list_view.html
+++ b/templates/polls/user_list_view.html
@@ -25,7 +25,7 @@
                     <td>{{ i.email }}</td>
                     <td>{{ i.is_active }}</td>
                     <td><a href="/polls/editUserProfile/?userid=''" class="btn btn-primary">Edit User</a></td>
-                    <td><button id='' class="btn btn-primary delete-user-button">Delete User</button></td>
+                    <td><button id='{{ i.id }}' class="btn btn-primary delete-user-button">Delete User</button></td>
                 </tr>
                 {% endfor %}
                 </tbody>
@@ -46,4 +46,24 @@
                     </span>
             </div>
 </div>
+{% endblock %}
+
+{% block modal_window %}
+    <div id="confirmDialog" class="modal fade">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    <h4 class="modal-title">Confirmation</h4>
+                </div>
+                <div class="modal-body">
+                    <p>Do you want to delete this record?</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+                    <button type="button" class="btn btn-danger" id="deleteButton">Delete</button>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
