--- a/templates/polls/profile_view.html
+++ b/templates/polls/profile_view.html
@@ -29,7 +29,7 @@
         <div class="control-group">
                 <label class="control-label"></label>
                 <div class="controls">
-                <a href="/polls/editUserProfile/" class="btn btn-primary">Edit Profile</a>
+                <a href="/polls/editUserProfile/{{ profile.id }}/" class="btn btn-primary">Edit Profile</a>
                 </div>
         </div>
     </fieldset>
